--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "numbers-to-words",
-  "description": "A modern JavaScript utility library delivering 'Numbers to words' functionality.",
+  "description": "A modern TypeScript library for converting numbers to words in multiple languages with multi currency support.",
   "version": "1.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx test.ts"
   },
   "keywords": [
-    "Number to words",
-    "Number to words converter",
+    "number to words",
+    "number converter",
+    "currency formatter",
+    "multi-language",
     "converter",
     "utility",
     "numbers",
     "words",
     "typescript",
-    "node"
+    "internationalization"
   ],
   "author": {
     "name": "Mateusz Bienias",
@@ -30,6 +32,7 @@
   "license": "MIT",
   "devDependencies": {
     "tsup": "^8.5.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
